# rust-servers-services-apps

./: .gitignore  README.md  cmd.txt
.devcontainer/: devcontainer.json
chapter12/tutor-db/: .env  Dockerfile-tutor-webservice  docker-compose.yml
chapter12/tutor-db/c12-data/: init-tables.sql  init.sql  initdb.sql
chapter12/tutor-db/src/iter5/dbaccess/: course.rs  mod.rs  tutor.rs
chapter12/tutor-db/src/iter5/dbscripts/: course.sql  tutor-course.sql
chapter12/tutor-db/src/iter5/handlers/: course.rs
chapter12/tutor-db/src/iter5/models/: tutor.rs
chapter2/scenario1/: Cargo.toml  README.md
chapter2/scenario1/http/: Cargo.toml
chapter2/scenario1/http/src/: httprequest.rs  httpresponse.rs  lib.rs
chapter2/scenario1/httpserver/: Cargo.toml
chapter2/scenario1/httpserver/data/: orders.json
chapter2/scenario1/httpserver/public/: 404.html  health.html  index.html  styles.css
chapter2/scenario1/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
chapter2/scenario1/tcpclient/: Cargo.toml
chapter2/scenario1/tcpclient/src/: main.rs
chapter2/scenario1/tcpserver/: Cargo.toml
chapter2/scenario1/tcpserver/src/: main.rs
chapter3/ezytutors/: Cargo.toml
chapter3/ezytutors/tutor-nodb/: Cargo.toml
chapter3/ezytutors/tutor-nodb/src/: handlers.rs  models.rs  routes.rs
chapter4/ezytutors/: Cargo.toml  README.md
chapter4/ezytutors/tutor-db/: .env  Cargo.toml  iter3-test-clean.sql
chapter4/ezytutors/tutor-db/src/: database.sql
chapter4/ezytutors/tutor-db/src/iter2/: handlers.rs
chapter4/ezytutors/tutor-db/src/iter3/: db_access.rs  handlers.rs  routes.rs  state.rs
chapter4/ezytutors/tutor-nodb/: Cargo.toml
chapter4/ezytutors/tutor-nodb/src/: handlers.rs  models.rs  routes.rs  state.rs
chapter5/ezytutors/: ._.gitignore  .gitignore
chapter5/ezytutors/tutor-db/: .env  Cargo.toml
chapter5/ezytutors/tutor-db/src/: database.sql
chapter5/ezytutors/tutor-db/src/iter4/: db_access.rs  errors.rs  handlers.rs  models.rs
chapter6/ezytutors/: .gitignore  Cargo.toml
chapter6/ezytutors/tutor-db/: README.md
chapter6/ezytutors/tutor-db/src/iter5/: errors.rs  routes.rs
chapter6/ezytutors/tutor-db/src/iter5/dbaccess/: course.rs
chapter6/ezytutors/tutor-db/src/iter5/dbscripts/: course.sql
chapter6/ezytutors/tutor-db/src/iter5/handlers/: course.rs  general.rs  tutor.rs
chapter6/ezytutors/tutor-db/src/iter5/models/: tutor.rs
chapter7/ezytutors/tutor-web-app-ssr/: Cargo.toml  README.md
chapter7/ezytutors/tutor-web-app-ssr/static/iter2/: form.html  user.html
chapter7/ezytutors/tutor-web-app-ssr/static/iter3/: list.html
chapter7/ezytutors/tutor-web-service/src/iter5/dbaccess/: course.rs
chapter7/ezytutors/tutor-web-service/src/iter5/dbscripts/: tutor-course.sql
chapter7/ezytutors/tutor-web-service/src/iter5/handlers/: mod.rs  tutor.rs
chapter8/ezytutors/: .gitignore
chapter8/ezytutors/tutor-web-app-ssr/: .env  Cargo.toml  README.md
chapter8/ezytutors/tutor-web-app-ssr/src/iter5/: dbaccess.rs  errors.rs  handler.rs  mod.rs  model.rs  routes.rs  state.rs
chapter8/ezytutors/tutor-web-app-ssr/static/: styles.css
chapter8/ezytutors/tutor-web-app-ssr/static/iter1/: index.html
chapter8/ezytutors/tutor-web-app-ssr/static/iter4/: list.html
chapter8/ezytutors/tutor-web-app-ssr/static/iter5/: register.html
chapter8/ezytutors/tutor-web-service/src/iter5/dbaccess/: tutor.rs
chapter8/ezytutors/tutor-web-service/src/iter5/dbscripts/: course.sql
chapter8/ezytutors/tutor-web-service/src/iter5/models/: course.rs
chapter9/: README.md
chapter9/ezytutors/: ._.gitignore  Cargo.toml
chapter9/ezytutors/tutor-web-app-ssr/: .env  Cargo.toml  README.md
chapter9/ezytutors/tutor-web-app-ssr/src/iter5/: errors.rs  handler.rs  model.rs
chapter9/ezytutors/tutor-web-app-ssr/src/iter5/dbscripts/: user.sql
chapter9/ezytutors/tutor-web-app-ssr/src/iter6/: model.rs  routes.rs  state.rs
chapter9/ezytutors/tutor-web-app-ssr/src/iter6/dbscripts/: user.sql
chapter9/ezytutors/tutor-web-app-ssr/src/iter6/handler/: auth.rs  course.rs  mod.rs
chapter9/ezytutors/tutor-web-app-ssr/static/: static-web-page.html  tutor-styles.css
chapter9/ezytutors/tutor-web-app-ssr/static/iter5/: register.html
chapter9/ezytutors/tutor-web-app-ssr/static/iter6/: signin.html  user.html
chapter9/ezytutors/tutor-web-service/: .env
chapter9/ezytutors/tutor-web-service/src/iter5/: routes.rs
chapter9/ezytutors/tutor-web-service/src/iter5/dbscripts/: tutor-course.sql
chapter9/ezytutors/tutor-web-service/src/iter5/handlers/: course.rs  tutor.rs
