[package]
name = "httpserver"
version = "0.1.0"
authors = ["peshwar9"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = {path = "../http"}
serde = {version = "1.0.117",features = ["derive"]} 
serde_json = "1.0.59"