[package]
name = "tutor-nodb"
version = "0.1.0"
authors = ["peshwar9"]
edition = "2021"
default-run = "tutor-service"


[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
# Data serialization library
serde = { version = "1.0.144", features = ["derive"] }
# Other utilities
chrono = {version = "0.4.22", features = ["serde"]}